--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@popperjs/core": "^2.11.8",
+    "axios": "^1.7.3",
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
