--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.53.0",
+    "react-rating": "^2.0.5",
     "zod": "^3.23.8",
     "zustand": "^4.5.2"
   },
