--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
     "axios": "^1.7.3",
+    "date-fns": "^4.1.0",
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
