--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "date-fns": "^4.1.0",
     "next": "14.1.0",
     "react": "^18",
+    "react-datepicker": "^7.6.0",
     "react-dom": "^18",
     "react-hook-form": "^7.53.0",
     "react-simple-star-rating": "^5.1.7",
