--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
+    "@react-input/mask": "^2.0.4",
     "axios": "^1.7.3",
     "date-fns": "^4.1.0",
     "next": "14.1.0",
@@ -17,6 +18,8 @@
     "react-datepicker": "^7.6.0",
     "react-dom": "^18",
     "react-hook-form": "^7.53.0",
+    "react-input-mask": "^2.0.4",
+    "react-maskedinput": "^4.0.1",
     "react-simple-star-rating": "^5.1.7",
     "zod": "^3.23.8",
     "zustand": "^4.5.2"
