--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
-    "@react-input/mask": "^2.0.4",
     "axios": "^1.7.3",
     "date-fns": "^4.1.0",
     "next": "14.1.0",
@@ -18,8 +17,6 @@
     "react-datepicker": "^7.6.0",
     "react-dom": "^18",
     "react-hook-form": "^7.53.0",
-    "react-input-mask": "^2.0.4",
-    "react-maskedinput": "^4.0.1",
     "react-simple-star-rating": "^5.1.7",
     "zod": "^3.23.8",
     "zustand": "^4.5.2"
@@ -39,5 +36,6 @@
     "prettier-plugin-tailwindcss": "^0.6.6",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
-  }
+  },
+  "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
 }
